--- a/.github/workflows/gtest.yml
+++ b/.github/workflows/gtest.yml
@@ -4,7 +4,7 @@ on: [push, pull_request]
 
 jobs:
   call-shared-workflow:
-    uses: Vergil4828/MAI_LABS_OOP/.github/workflows/gtests.yml@master\
+    uses: Vergil4828/MAI_LABS_OOP/.github/workflows/gtests.yml@master
     permissions:
       contents: read
       checks: write
